@@ -10,7 +10,7 @@ trap cleanup SIGINT
 mvn clean package 
 
 # Run the clients with native access flag
-java --enable-native-access=ALL-UNNAMED -cp target/duelo-client-1.0-SNAPSHOT.jar com.duelo.client.Main edgar 1234 &
-java --enable-native-access=ALL-UNNAMED -cp target/duelo-client-1.0-SNAPSHOT.jar com.duelo.client.Main gabriel 1234 
+java -cp target/duelo-client-1.0-SNAPSHOT.jar com.duelo.client.Main edgar 1234 &
+java -cp target/duelo-client-1.0-SNAPSHOT.jar com.duelo.client.Main gabriel 1234 
 
 wait
